terminado header. Ffalta section lateral

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,2 +1,21 @@
 /* @VARIABLES */
 /* ********** */
+
+//colores
+$colores: (
+    blancoTipo: #FFFFFF,
+    naranjaBoton: #FF9800
+);
+
+//tamaños
+$paddingHead: (
+    leftRigth: 90px,
+    topBottom: 40px
+);
+$radioImg: 10px;
+$breakpointDesktop: 1000px;
+
+//tipografia
+
+$menuTipo: 16px;
+
