--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,4 +1,28 @@
 /* @GRIDS */
 /* ********** */
 
+.contenido{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 30px 1fr;
+    grid-row-gap: 100px;
+}
 
+.contenido__navegador__menu{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 0.3rem;
+}
+
+.gridImg1, .gridImg2, .gridImg3{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    
+}
+
+.gridImg__flecha{
+    grid-column: span-1;
+    grid-row: span-1;
+    
+}
